templates/kimai-helmchart_template.yaml
---
# Source: kimai-helmchart/templates/svc-additional-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: additional-mysql
  labels:
    app.kubernetes.io/part-of: kimai
    app.kubernetes.io/name: additional-mysql
    app.kubernetes.io/component: additional-mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      protocol: TCP
      targetPort: mysql
      name: mysql
  selector:
    app.kubernetes.io/part-of: kimai
    app.kubernetes.io/name: additional-mysql
    app.kubernetes.io/component: additional-mysql
---
# Source: kimai-helmchart/templates/svc-core-kimai.yml
apiVersion: v1
kind: Service
metadata:
  name: core-kimai
  labels:
    app.kubernetes.io/part-of: kimai
    app.kubernetes.io/name: core-kimai
    app.kubernetes.io/component: core-kimai
spec:
  type: ClusterIP
  ports:
    - port: 8001
      protocol: TCP
      targetPort: kimai-http
      name: kimai-http
  selector:
    app.kubernetes.io/part-of: kimai
    app.kubernetes.io/name: core-kimai
    app.kubernetes.io/component: core-kimai
---
# Source: kimai-helmchart/templates/deploy-additional-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: additional-mysql
  labels:
    app.kubernetes.io/part-of: kimai
    app.kubernetes.io/name: additional-mysql
    app.kubernetes.io/component: additional-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: kimai
      app.kubernetes.io/name: additional-mysql
      app.kubernetes.io/component: additional-mysql
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: kimai
        app.kubernetes.io/name: additional-mysql
        app.kubernetes.io/component: additional-mysql
    spec:
      containers:
        - env:
          - name: MYSQL_DATABASE
            value: kimai
          - name: MYSQL_USER
            value: kimai
          - name: MYSQL_PASSWORD
            value: kimai
          - name: MYSQL_ROOT_PASSWORD
            value: changemeplease
          image: mysql:5.7
          name: additional-mysql
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              memory: 512Mi
              cpu: 1000m
            limits:
              memory: 4096Mi
              cpu: 2000m
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: additional-mysql-data
---
# Source: kimai-helmchart/templates/deploy-core-kimai.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-kimai
  labels:
    app.kubernetes.io/part-of: kimai
    app.kubernetes.io/name: core-kimai
    app.kubernetes.io/component: core-kimai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: kimai
      app.kubernetes.io/name: core-kimai
      app.kubernetes.io/component: core-kimai
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: kimai
        app.kubernetes.io/name: core-kimai
        app.kubernetes.io/component: core-kimai
    spec:
      containers:
        - env:
            - name: ADMINMAIL
              value: admin@kimai.local
            - name: ADMINPASS
              value: changemeplease
            - name: APP_ENV
              value: 
            - name: DATABASE_URL
              value: mysql://kimai:kimai@additional-mysql/kimai
            - name: TRUSTED_HOSTS
              value: localhost,kimai.local
          image: kimai/kimai2:apache-debian-master-prod
          name: core-kimai
          ports:
            - containerPort: 8001
              name: kimai
          resources:
            requests:
              memory: 256Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 1000m
          volumeMounts:
            - mountPath: /opt/kimai/var
              name: kimai-var
      volumes:
        - name: kimai-var
          persistentVolumeClaim:
            claimName: core-kimai-var
---
# Source: kimai-helmchart/templates/ing-core-kimai.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-kimai
  labels:
    app.kubernetes.io/part-of: kimai
    app.kubernetes.io/name: core-kimai
spec:
  
  tls:
  - hosts:
    - kimai.local
    secretName: add-you-own-here
  
  rules:
  - host: kimai.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: core-kimai
            port:
              name: kimai-http
